crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bin_op__multiple_ops.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bin_op/multiple_ops.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..19,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..3,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 0..3,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: UnaryOp(
                                ExprUnaryOp {
                                    node_index: NodeIndex(None),
                                    range: 2..3,
                                    op: UAdd,
                                    operand: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 3..3,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 4..9,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 4..9,
                            left: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 4..5,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 8..9,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 10..13,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 10..13,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 10..11,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Sub,
                            right: UnaryOp(
                                ExprUnaryOp {
                                    node_index: NodeIndex(None),
                                    range: 12..13,
                                    op: USub,
                                    operand: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 13..13,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 14..19,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 14..19,
                            left: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 14..15,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Sub,
                            right: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 18..19,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x++
  |    ^ Syntax Error: Expected an expression
2 | 1 + 2
3 | x--
4 | 1 - 2
  |


  |
1 | x++
2 | 1 + 2
3 | x--
  |    ^ Syntax Error: Expected an expression
4 | 1 - 2
  |
